<resources>
    <string name="app_name">Weightr</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="switch_to_register">Don\'t have an account? Sign up</string>
    <string name="switch_to_login">Already have an account? Sign in</string>
    <string name="toggle_password_visibility">Show password</string>
    <string name="prompt_username">Username</string>
    <string name="set_goal">Set new goal</string>
    <string name="logout">Logout</string>
    <string name="log_weight">Log weight</string>
    <string name="current_weight">Current Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="motivation_message">Setting goals is the first step in turning the invisible into the visible.</string>
    <string name="delete_entry">Delete weight record</string>
    <string name="navigate_to_history">Open weight log</string>

    <string name="sms_permissions_title">Enable Goal Celebrations?</string>
    <string name="sms_permissions_explanation">Allow SMS notifications to cheer your progress? We\'ll only send celebratory messages when you hit your weight goal, like \"You did it—150 lbs achieved!\" \n\nNo spam, ever.</string>
    <string name="request_sms_permission">Grant SMS Access</string>
    <string name="continue_without_sms">Continue Without SMS</string>
    <string name="mock_goal_sms">Congrats! 🎉 You\'ve reached your goal weight of 150 lbs. Keep it up!</string>
    <string name="skip_permission">Not now</string>
    <string name="skip_permission_description">Skip SMS permission request and continue</string>
    <string name="request_sms_permission_description">Request permission to send goal achievement SMS notifications</string>
    <string name="continue_without_sms_description">Continue without SMS notifications (app will use in-app alerts)</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="error_invalid_username">Enter a valid username</string>
    <string name="error_invalid_password">Password must be at least 8 characters</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="register_failed">Registration failed</string>
    <string name="current_date">Date: %1$s</string>
    <string name="enter_weight">Enter weight</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_invalid_weight">Enter a valid weight</string>
    <string name="weight_saved">Weight logged successfully!</string>
    <string name="error_no_user">Invalid state: no user. Try to relogin.</string>
    <string name="already_logged">You already logged your weight for today.</string>
    <string name="enter_goal_weight">Enter your new goal weight</string>
    <string name="error_invalid_goal">Invalid goal weight</string>
    <string name="goal_saved">Goal weight saved</string>
    <string name="current_goal">%.1f</string>
    <string name="weight_format">%.1f lbs</string>
    <string name="to_goal">%d%% to goal</string>
    <string name="placeholder_weight">Log your weight</string>
    <string name="placeholder_goal">Set your goal</string>
    <string name="placeholder_progress">Calculating progress…</string>
    <string name="placeholder_graph">Weight Trend Graph\n(Coming Soon)</string>
    <string name="content_desc_goal_dialog">Dialog to enter or edit your goal weight</string>
    <string name="content_desc_goal_input">Edit text field to input your goal weight in pounds, supports decimal numbers</string>
    <string name="content_desc_save_button">Button to save the entered goal weight</string>
    <string name="content_desc_cancel_button">Button to cancel and close the goal weight dialog</string>
    <string name="set_weight_first">Set your current weight first</string>
    <string name="weight_helper">Use your scale’s value</string>
    <string name="unit_lbs">lbs</string>
    <string name="cd_pick_date">Select date</string>
    <string name="history_fragment_label">Weight history</string>
    <string name="edit_entry">Button to edit this entry</string>
    <string name="generic_error">Error: %s</string>
    <string name="weight_edited">Weight has been edited</string>
    <string name="sms_goal_reached">Goal reached! Current weight: %1$.1f</string>
    <string name="sms_failed">Couldn’t send SMS: %1$s</string>
    <string name="sms_error">Unable to send SMS: %s</string>
    <string name="starting_goal_weight">Starting goal weight</string>
    <string name="target_goal_weight">Target goal weight</string>
</resources>