<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:importantForAutofill="yes"
    android:contentDescription="@string/content_desc_goal_dialog">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_weight_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_goal_weight"
        android:labelFor="@id/goal_weight_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goal_weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textColor="?attr/colorOnSurface"
            android:imeOptions="actionDone"
            android:contentDescription="@string/content_desc_goal_input"
            android:nextFocusForward="@+id/save_goal_button" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_goal_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_weight_layout"
        android:contentDescription="@string/content_desc_save_button"
        android:nextFocusLeft="@+id/cancel_goal_button"
        android:nextFocusForward="@+id/cancel_goal_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_goal_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/save_goal_button"
        app:layout_constraintTop_toBottomOf="@+id/goal_weight_layout"
        android:contentDescription="@string/content_desc_cancel_button"
        android:nextFocusRight="@+id/save_goal_button"
        android:nextFocusForward="@+id/save_goal_button" />
</androidx.constraintlayout.widget.ConstraintLayout>